--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/27a9c64135.js" crossorigin="anonymous"></script>
+    
 
     <title>Github Finder</title>
   </head>
